--- a/.github/workflows/demo2.yml
+++ b/.github/workflows/demo2.yml
@@ -1,4 +1,4 @@
-name: Demo Workflow
+name: Demo Workflow2
 
 on:
   workflow_dispatch:
@@ -11,6 +11,6 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Run Hello World
-        run: echo "Hello triggered manually!"
+        run: echo "Hello triggered manually2!"
       - name: Run Hello Actions
-        run: echo "Hello Github actions!"
+        run: echo "Hello Github actions2!"
