--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -2,6 +2,15 @@ name: Demo Workflow
 
 on:
   workflow_dispatch:
+    inputs:
+      environment:
+        description: "Choose environment"
+        required: true
+        default: "prod"
+        type: choice
+        options:
+          - prod
+          - nonprod
 
 jobs:
   demo-job:
@@ -10,7 +19,13 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
-      - name: Run Hello World
-        run: echo "Hello triggered manually!"
-      - name: Run Hello Actions
-        run: echo "Hello Github actions!"
+      - name: Print environment
+        run: echo "Environment selected: ${{ github.event.inputs.environment }}"
+
+      - name: Say hello from master
+        if: github.event.inputs.environment == 'prod'
+        run: echo "Hello from master"
+
+      - name: Say hello from test3
+        if: github.event.inputs.environment == 'nonprod'
+        run: echo "Hello from test3"
